# BetterAppWriter

./: .gitignore  .gitmodules  BetterAppWriter.sln  CHANGELOG.md  Lib  README.md  make.bat  make_dll_wrap.py
BetterAW/: BaseWindowControl.cs  BetterAW.csproj  DragBarControl.cs  InterceptKeys.cs  KeyboardShortcut.cs  KeyboardShortcutLabel.cs  KeyboardShortcuts.xaml  KeyboardShortcuts.xaml.cs  Settings.xaml  Terminal.xaml  Translation.cs
BetterAW/Images/: Keyboard.xaml  PWAbove.xaml  PWBellow.xaml  PWFAbove.xaml  PWFBellow.xaml  Settings.xaml  Terminal.xaml
BetterAW/Properties/: AssemblyInfo.cs  Resources.Designer.cs
BetterAW/Styles/: KeyboardShortcutStyle.xaml  WindowResources.xaml
DictionaryHandler/: OxfordLearnersDictionaries.cs  WebBrowserExtensions.cs
DictionaryHandler/Properties/: AssemblyInfo.cs  Settings.Designer.cs
Icons/: Keyboard.ai  Keyboard.xaml  PWAbove.ai  PWAbove.xaml  PWBellow.ai  PWBellow.xaml  PWFAbove.ai  PWFAbove.xaml  PWFBellow.ai  PWFBellow.xaml  PredictionWindow.ai  Settings.ai  Settings.eps  Settings.xaml  Terminal.ai  Terminal.xaml  TranslationCreatorIcon.ai
TranslationCreator/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TranslationCreator.csproj  TranslationLine.cs
WinAPIHooks/: CursorPosition.cpp  CursorPosition.h  Version.rc  WinAPIHooks.vcxproj
nlp_loader/: .gitignore  CMakeLists.txt  README.md  nlp.cpp  version.rc.in
nlp_loader/sharploader/: CMakeLists.txt  sharploader.cpp  sharploader.hpp
sharp_injector/: FodyWeavers.xml  packages.config  sharp_injector.csproj
sharp_injector/DTO/: JSONKeybinding.cs  (+1 more)
(+98 files in other folders)
